--- a/Project/PostProcessFX/PostProcessFX.csproj
+++ b/Project/PostProcessFX/PostProcessFX.csproj
@@ -60,9 +60,12 @@
     <Compile Include="AntiAliasingEffect.cs" />
     <Compile Include="BloomEffect.cs" />
     <Compile Include="ConfigUI.cs" />
+    <Compile Include="DepthOfFieldEffect.cs" />
     <Compile Include="ModLoader.cs" />
     <Compile Include="MotionblurEffect.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScreenSpaceAmbientObscurance.cs" />
+    <Compile Include="SSAOEffect.cs" />
     <Compile Include="SunLensflare.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
