--- a/Project/PostProcessFX/PostProcessFX.csproj
+++ b/Project/PostProcessFX/PostProcessFX.csproj
@@ -57,27 +57,28 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AntiAliasingEffect.cs" />
-    <Compile Include="AreaTexture.cs" />
-    <Compile Include="BloomEffect.cs" />
+    <Compile Include="EffectMenu\AntiAliasingEffect.cs" />
+    <Compile Include="SMAA\AreaTexture.cs" />
+    <Compile Include="EffectMenu\BloomEffect.cs" />
+    <Compile Include="DrawGUI.cs" />
     <Compile Include="ScreenSpaceReflection.cs" />
     <Compile Include="ConfigUI.cs" />
-    <Compile Include="DepthOfFieldEffect.cs" />
-    <Compile Include="ScreenSpaceReflectionEffect.cs" />
+    <Compile Include="EffectMenu\DepthOfFieldEffect.cs" />
+    <Compile Include="EffectMenu\ScreenSpaceReflectionEffect.cs" />
     <Compile Include="ModLoader.cs" />
-    <Compile Include="MotionblurEffect.cs" />
+    <Compile Include="EffectMenu\MotionblurEffect.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenSpaceAmbientObscurance.cs" />
-    <Compile Include="SearchTexture.cs" />
-    <Compile Include="SMAAEffect.cs" />
-    <Compile Include="SSAOEffect.cs" />
+    <Compile Include="SMAA\SearchTexture.cs" />
+    <Compile Include="SMAA\SMAAEffect.cs" />
+    <Compile Include="EffectMenu\SSAOEffect.cs" />
     <Compile Include="SunLensflare.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>mkdir "%25LOCALAPPDATA%25\Colossal Order\Cities_Skylines\Addons\Mods\$(SolutionName)"
+    <PostBuildEvent>mkdir "%25LOCALAPPDATA%25\Colossal Order\Cities_Skylines\Addons\Mods\$(ProjectName)"
 del "%25LOCALAPPDATA%25\Colossal Order\Cities_Skylines\Addons\Mods\$(SolutionName)\$(TargetFileName)"
-xcopy /y "$(TargetPath)" "%25LOCALAPPDATA%25\Colossal Order\Cities_Skylines\Addons\Mods\$(SolutionName)"</PostBuildEvent>
+xcopy /y "$(TargetPath)" "%25LOCALAPPDATA%25\Colossal Order\Cities_Skylines\Addons\Mods\$(ProjectName)"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
