--- a/Project/PostProcessFX/PostProcessFX.csproj
+++ b/Project/PostProcessFX/PostProcessFX.csproj
@@ -33,9 +33,6 @@
     <Reference Include="Assembly-CSharp">
       <HintPath>F:\SteamLibrary\steamapps\common\Cities_Skylines\Cities_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
-    <Reference Include="Assembly-UnityScript-firstpass">
-      <HintPath>F:\SteamLibrary\steamapps\common\Cities_Skylines\Cities_Data\Managed\Assembly-UnityScript-firstpass.dll</HintPath>
-    </Reference>
     <Reference Include="ColossalManaged">
       <HintPath>F:\SteamLibrary\steamapps\common\Cities_Skylines\Cities_Data\Managed\ColossalManaged.dll</HintPath>
     </Reference>
@@ -57,24 +54,27 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EffectConfig.cs" />
+    <Compile Include="Config\AntiAliasingConfig.cs" />
+    <Compile Include="Config\BloomConfig.cs" />
+    <Compile Include="Config\ConfigUtility.cs" />
+    <Compile Include="Config\GUIConfig.cs" />
+    <Compile Include="Config\MotionblurConfig.cs" />
     <Compile Include="EffectMenu\AntiAliasingEffect.cs" />
     <Compile Include="EffectMenu\IEffectMenu.cs" />
+    <Compile Include="Effect\AntiAliasing.cs" />
+    <Compile Include="Effect\Bloom.cs" />
+    <Compile Include="Effect\CameraMotionBlur.cs" />
+    <Compile Include="Effect\PostEffectBase.cs" />
     <Compile Include="SMAA\AreaTexture.cs" />
     <Compile Include="EffectMenu\BloomEffect.cs" />
-    <Compile Include="DrawGUI.cs" />
-    <Compile Include="ScreenSpaceReflection.cs" />
+    <Compile Include="Utility.cs" />
     <Compile Include="ConfigUI.cs" />
-    <Compile Include="EffectMenu\DepthOfFieldEffect.cs" />
-    <Compile Include="EffectMenu\ScreenSpaceReflectionEffect.cs" />
     <Compile Include="ModLoader.cs" />
     <Compile Include="EffectMenu\MotionblurEffect.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScreenSpaceAmbientObscurance.cs" />
     <Compile Include="SMAA\SearchTexture.cs" />
     <Compile Include="SMAA\SMAAEffect.cs" />
-    <Compile Include="EffectMenu\SSAOEffect.cs" />
-    <Compile Include="EffectMenu\SunLensflare.cs" />
+    <Compile Include="Effect\LensflareEffect.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
